--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,22 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/*header*/
+header{
+  width: 100%;
+  height: 50px;
+}
+
+.signup-btn{
+  color: white;
+  padding: 5px 2px 5px 2px;
+  background-color: orange;
+  border-radius: 4px;
+  &:hover{
+    color:white;
+  }
+}
+
 .carousel{
   padding-top: 50px;
 }
