--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,8 @@
                 Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", '#' %></li>
+                <li><%= link_to "プロフィール", current_user %></li>
+                <li><%= link_to "アカウント", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Log out", logout_path, method: :delete %>
@@ -20,7 +20,7 @@
             </li>
             <% else %>
             <li><%= link_to "ログイン",   login_path %></li>
-            <li class="signup-btn"><%= link_to "新規登録",   signup_path %></li>
+            <li><%= link_to "新規登録",   signup_path %></li>
             <% end %>
           </ul>
         </nav>
