Change Home Layout

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,8 +19,8 @@
               </ul>
             </li>
             <% else %>
-            <li><%= link_to "ログイン",   login_path %></li>
-            <li><%= link_to "新規登録",   signup_path %></li>
+            <li class="login__btn"><%= link_to "ログイン",   login_path %></li>
+            <li class="signup__btn"><%= link_to "新規登録",   signup_path %></li>
             <% end %>
           </ul>
         </nav>
