--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,12 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all',
                                'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    "https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css", media: 'all',
+                                'data-turbolinks-track': 'reload'%>
     <%= javascript_include_tag 'application',
                                'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js",
+                                'data-turbolinks-track': 'reload'%>
     <%= render 'layouts/shim' %>
   </head>
   <body>
@@ -14,9 +18,11 @@
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
-    <div class="container">
+    <div class="container margin__top">
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
+    <%= javascript_include_tag 'swiper',
+                               'data-turbolinks-track': 'reload' %>
   </body>
 </html>
