--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,15 +3,63 @@
 
 /*header*/
 header{
+  padding-bottom: 10px;
+}
 
+.navbar{
+  border-bottom: 1px solid gray;
+  background-color: white;
+}
+
+.login__btn{
+  a{
+    color: black;
+  }
+}
+
+.signup__btn{
+  a{
+    color: white;
+    background-color: orange;
+    border-radius: 4px;
+  }
 }
 
 #logo{
   
 }
 
-.carousel{
-  padding-top: 50px;
+/* body */
+
+.margin__top{
+  padding-top: 81px;
+}
+
+/* swiper */
+.swiper-slide {
+ width: 100%;
+ max-height: 500px;
+ min-height: 250px;
+}
+
+.swiper-slide img {
+ width: 100%;
+ min-height: 250px;
+ object-fit: cover;
+}
+
+/* post */
+.post__wrapper{
+  text-align: center;
+  h3{
+    color: orange;
+    display: inline-block;
+    background-color: #FFF5EF;
+    border-radius: 4px;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+  }
 }
 
 /* forms */
