--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,34 +1,56 @@
-<div id="example-2" class="carousel slide" data-ride="carousel" style="width:400px">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="slide1.png" alt="First slide">
+<!--ここからswiper-->
+<div class="wrapper">
+  <div class="swiper-container top-carousel">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <%= image_tag 'colorfull.jpg', alt: 'sample' %>
+      </div>
+      <div class="swiper-slide">
+        <%= image_tag 'redblock.jpg', alt: 'sample' %>
+      </div>
+      <div class="swiper-slide">
+        <%= image_tag 'colorfull.jpg', alt: 'sample' %>
+      </div>
+      
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-pagination"></div>
     </div>
-    <div class="carousel-item">
-      <img src="slide2.png" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img src="slide3.png" alt="Third slide">
-    </div>
-    <a class="carousel-control-prev" href="#example-2" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#example-2" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 </div>
 
-<div class="row">
+
+<div class="row post__wrapper">
   <div class="col-md-8 popular">
-    <a class="popular-post" width="400" height="400">
-      人気の記事です
+    <h3>人気</h3>
+    <a class="popular-post">
+      <%= image_tag 'colorfull.jpg', alt: 'sample' %>
+      <div class="post__text">
+        <h2>ブログ方アフィリエイトの完全講義</h2>
+        <p>こんにちは、マナブです。ブログ歴は６年。ブログ収益は月600万。個人ブログのアクセスは「月間で170万回」です。</p>
+        <div class="post__detail">
+          <div class="post__price">¥14800</div>
+          <div class="post__evaluation"></div>
+          <div class="post__comment">37件</div>
+        </div>
+        <div class="post__footer">
+          <div class="post__footer__left">
+            <%= image_tag 'colorfull.jpg', alt: 'sample' %>
+            <div class="user__info">
+              <div class="user__info__name">マナブ</div>
+              <div class="user__info__date">2日前</div>
+            </div>
+          </div>
+          <div class="post__footer__right">
+            <div class="post__category">ブログ・メディア運営</div>
+          </div>
+        </div>
+      </div>
     </a>
   </div>
   <div class="col-md-4 related">
+    <h3>新着</h3>
     <a class="related-post">
-      関連のある記事です
     </a>
   </div>
 </div>
