Create Post Layout

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,8 +23,8 @@
 <div class="row post__wrapper">
   <div class="col-md-8 popular">
     <h3>人気</h3>
-    <a class="popular-post">
-      <%= image_tag 'colorfull.jpg', alt: 'sample' %>
+    <a class="popular-post" href="#">
+      <%= image_tag 'colorfull.jpg', alt: 'sample', class: "post__thambnail" %>
       <div class="post__text">
         <h2>ブログ方アフィリエイトの完全講義</h2>
         <p>こんにちは、マナブです。ブログ歴は６年。ブログ収益は月600万。個人ブログのアクセスは「月間で170万回」です。</p>
@@ -35,9 +35,9 @@
         </div>
         <div class="post__footer">
           <div class="post__footer__left">
-            <%= image_tag 'colorfull.jpg', alt: 'sample' %>
+            <%= image_tag 'colorfull.jpg', alt: 'sample', width: '50px', height: '50px'%>
             <div class="user__info">
-              <div class="user__info__name">マナブ</div>
+              <div class="divuser__info__name">マナブ</div>
               <div class="user__info__date">2日前</div>
             </div>
           </div>
