--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,6 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <% if logged_in? %>
-            <li><%= link_to "ユーザーページ", '#' %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
@@ -18,6 +17,7 @@
                 </li>
               </ul>
             </li>
+            <li><%= link_to "投稿", '#'%></li>
             <% else %>
             <li class="login__btn"><%= link_to "ログイン",   login_path %></li>
             <li class="signup__btn"><%= link_to "新規登録",   signup_path %></li>
