--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -4,4 +4,16 @@
     <%= f.text_area :content, placeholder: "コンサルの内容を書いてください" %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
+  <span class="thumbnail">
+    <%= f.file_field :thumbnail, accept: 'image/jpeg,image/gif,image/png' %>
+  </span>
 <% end %>
+
+<script type="text/javascript">
+  $('#post_thumbnail').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('アップロードできる画像サイズは５MBまでです');
+    }
+  });
+</script>
