--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@post) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "コンサルの内容を書いてください" %>
+    <%= f.text_area :title, placeholder: "タイトルを入力してください" %>
+    <%= f.text_area :content, placeholder: "コンサル内容を入力してください" %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
   <span class="thumbnail">
