PostモデルにPriceカラムを作成

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,6 +5,7 @@
   </span>
   <span class="content">
     <%= post.content %>
+    <%= post.price %>
     <%= image_tag post.thumbnail.url if post.thumbnail? %>
   </span>
   <span class="timestamp">
