--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -3,6 +3,7 @@
   <div class="field">
     <%= f.text_area :title, placeholder: "タイトルを入力してください" %>
     <%= f.text_area :content, placeholder: "コンサル内容を入力してください" %>
+    <%= f.number_field :price, placeholder: "金額を入力してください" %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
   <span class="thumbnail">
