--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,19 +1,31 @@
-<li id="post-<%= post.id %>">
-  <span class="user"><%= link_to post.user.name, post.user %></span>
-  <span class="title">
-    <%= post.title %>
-  </span>
-  <span class="content">
-    <%= post.content %>
-    <%= post.price %>
-    <%= image_tag post.thumbnail.url if post.thumbnail? %>
-  </span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(post.created_at) %> ago.
-    <% if current_user?(post.user) %>
-      <%= link_to "delete", post, method: :delete,
-                                       data: { confirm: "You sure?" } %>
-    <% end %>
-    
-  </span>
-</li>
+  <div class="col-md-8 popular">
+    <h3 class="header__orange">人気</h3>
+    <a class="popular-post" href="#">
+      <%= image_tag post.thumbnail.url if post.thumbnail? %>
+      <div class="post__text">
+        <h2><%= post.content %></h2>
+        <p><%= post.content %></p>
+        <div class="post__detail">
+          <div class="post__price">¥<%= post.price %></div>
+          <div class="post__evaluation"></div>
+          <div class="post__comment">37件</div>
+        </div>
+        <div class="post__footer">
+          <div class="post__footer__left">
+            <%= image_tag 'colorfull.jpg', alt: 'sample', width: '50px', height: '50px'%>
+            <div class="user__info">
+              <div class="divuser__info__name"><%= link_to post.user.name, post.user %></div>
+              <div class="user__info__date"><%= time_ago_in_words(post.created_at) %>前</div>
+            </div>
+          </div>
+          <div class="post__footer__right">
+            <div class="post__category">ブログ・メディア運営</div>
+            <% if current_user?(post.user) %>
+              <%= link_to "delete", post, method: :delete,
+                                               data: { confirm: "You sure?" } %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
