フィードとリダイレクト先の修正

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
 <% if logged_in? %>
+<%= render 'swiper' %>
   <div class="row">
     <div class="col-md-4">
       <section class="user_info">
@@ -9,9 +10,16 @@
       </section>
     </div>
   </div>
+<div class="col-md-8 popular">
+  <h3 class="header__orange">人気</h3>
   <%= render 'shared/feed' %>
+</div>
 <% else %>
 
 <%= render 'swiper' %>
 
+<div class="col-md-8 popular">
+  <h3 class="header__orange">人気</h3>
+  <%= render 'shared/feed' %>
+</div>
 <% end %>
