--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="post__footer">
           <div class="post__footer__left">
-            <%= image_tag 'colorfull.jpg', alt: 'sample', width: '50px', height: '50px'%>
+            <img src="" width: "50" height: "50"></img>
             <div class="user__info">
               <div class="divuser__info__name"><%= link_to post.user.name, post.user %></div>
               <div class="user__info__date"><%= time_ago_in_words(post.created_at) %>前</div>
