--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,9 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
+      
+      <%=f.label :image, "ユーザー画像" %>
+      <%= f.file_field :image %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
