--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
   <div class="col-md-10">
     <div class="profile__wrapper">
       <div class="profile__img">
-        
+        <img src="<%= @user.image.url %>"></img>
       </div>
       <div class="profile__detail__wrapper">
         <div class="profile__detail__up">
           <div class="profile__name">
-            <h1>かめの甲羅</h1>
+            <h1><%= @user.name %></h1>
           </div>
           <div class="profile__follow">
             <% @user ||= current_user %>
