プロフィールの概要を設定できるようにする

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="profile__detail__down">
-          <p>かめの甲羅です。 仕事は、アフィリエイトとワードプレス講師です。 Youtubeもやっています。 Youtubeチャンネルは「かめの甲羅」です。 よろしくお願いします。</p>
+          <p><%= @user.about %></p>
         </div>
       </div>
     </div>
