--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,16 +10,16 @@
       </section>
     </div>
   </div>
-<div class="col-md-8 popular">
-  <h3 class="header__orange">人気</h3>
+<div class="col-md-8">
+  <h3 class="header__orange">新着</h3>
   <%= render 'shared/feed' %>
 </div>
 <% else %>
 
 <%= render 'swiper' %>
 
-<div class="col-md-8 popular">
-  <h3 class="header__orange">人気</h3>
+<div class="col-md-8">
+  <h3 class="header__orange">新着</h3>
   <%= render 'shared/feed' %>
 </div>
 <% end %>
