--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,28 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.post{
+  border: 1px solid #d8d8d8;
+  border-radius: 10px;
+}
+
+.new__post{
+  img{
+  width: 100%;
+  border-radius: 8px 8px 0 0;
+  max-height: 400px;
+  }
+}
+
+.post__detail{
+  display: flex;
+  div{
+    margin-right: 10px;
+  }
+}
+
+.post__footer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.post__footer__left{
+  display: flex;
+}
